# py-template

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: create-pr.yml  publish.yml  pylint.yml
